# isdi

./: .flaskenv  .gitignore  .gitmodules  .parse_dump.py.swp  .phone_scanner.py.swp  .server.py.swp  Brewfile  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  README_CHANGES.txt  REFACTORING_GUIDE.md  TERMUX-README.md  TERMUX_INSTALL.md  TODO.md  a.db  android.test.apps_list  android_permissions.py  android_perms.py  apps_stats.py  blacklist.py  blocklist.py  build-termux-pex.sh  buildozer.spec  config.py  context.pkl  contribution.md  crawl_1000_apps.csv  data_process.py  db.py  e  error.txt  evidence_collection.py  gui.py  here.appres  intake.py  ios.apps.test  ios_apps_crawl.csv  (+34 more)
.github/workflows/: get-stalkerware-indicators.yml  super-linter.yml
_ios/: ios_info.xml
data/: app-flags.csv  offstore_apks.csv
isdi/: android_permissions.py  blocklist.py  cli.py  config.py  db.py  parse_dump.py  phone_scanner.py  privacy_scan_android.py
isdi/scripts/: android_scan.sh  getnames.sh  ios_dump.sh  webusb.sh
isdi/static_data/: android_permissions.txt  android_permissions_labels.csv  flask.secret  pii.key
isdi/templates/: form.html  main.html
isdi/web/: __init__.py
isdi/webstatic/: myjscript.js
migrations/versions/: 6b4a5c8af161_.py  af4749bd457f_.py  b185ae931b8f_.py  ba39c8ffa596_.py  df5949a7f766_.py
patch/: app_flags_patch.py
phone_dumps/: 83c6500a47585595f72d654829cab29edd2c4f5253e6c05d5576cf04661fd6eb_android.txt  90f9479d28b583e574b2dfb90572c29f2acdc163_ios.json  LGM150dc9fd0ef.txt  LGM150dc9fd0ef_android.txt
phone_scanner/: __init__.py  android_permissions.py  blocklist.py  data_process.py  db.py  isdi_summarize.py  parse_dump.py  privacy_scan_android.py  runcmd.py
reports/: 20180509:19_ 10.csv  20180509:19_010.csv  20180509:19_10.csv  20180509:19_9.csv  20180509:21_001.csv  20180509:21_002.csv
scripts/: android_scan.sh  backup.sh  blacklist-flags-odds.py  bump_version.py  get-stalkerware-indicators.py  get_apk_common_name.sh  get_imei.sh  getnames.sh  github-action-get-stalkware-indicators.yml  ignore.py  ios_dependencies.sh  ios_dump.sh  ios_mount_linux.sh  ios_scan.sh  ios_ssh_expect.sh  monitor_usb.py  patch_ios_dylibs.sh  pmd3_termux.py  privacy_scan_android.py  pull_apks.sh  setup.deprecated.sh  setup.sh  webusb.sh
simulations/: .simulate.py.swp  data  make-trie.py  simulate.py  sort.py
src/isdi/: __init__.py  __main__.py  app.py  cli.py  config.py
static/: myjscript.js  style.css
static_data/: adb-linux  all_permissions.csv  android_permissions.csv  app-flags.csv  app-flags.csv~test  app-info.db~test  ios-deploy-darwin  ios_permissions.json  note.txt  notes.md  perms_map_android.txt
static_data/libimobiledevice-darwin/: idevice_id  idevicebackup  idevicebackup2  idevicecrashreport  idevicedate  idevicedebug  idevicedebugserverproxy  idevicediagnostics  ideviceenterrecovery  ideviceimagemounter  ideviceinfo  ideviceinstaller  idevicename  idevicenotificationproxy  idevicepair  ideviceprovision  idevicescreenshot  idevicesyslog  ifuse  iproxy  libimobiledevice.6.dylib  libosxfuse.2.dylib  libplist++.3.dylib  libplist.dylib  libusb-1.0.dylib  libusbmuxd.dylib  libzip.5.dylib
static_data/libimobiledevice-linux/: idevice_id  idevicebackup  idevicebackup2  idevicecrashreport  idevicedate  idevicedebug  idevicedebugserverproxy  idevicediagnostics  ideviceenterrecovery  ideviceimagemounter  ideviceinfo  ideviceinstaller  idevicename  idevicenotificationproxy  idevicepair  ideviceprovision  idevicescreenshot  idevicesyslog  ifuse  iproxy  (+4 more)
templates/: _formhelpers.html  app.html  base.html  evidence-account.html  evidence-home.html  evidence-scan-manualadd.html  evidence-scan.html  evidence-setup.html  evidence-taq.html  evidence.html  form.html  home.html  instruction.html  layout.html  main.html  page.html  printout.html  privacy.html  summary.html
tests/: .dockerignore  .parse_ios_apps.py.swp  .pd_ios_apps.py.swp  Dockerfile  Pixel2.permissions  android_perms.py  config.py  context.py  deploy_dump.fields  idevicesyslog.txt  ios_apps.plist  ios_deploy_dumps.txt  ios_dump.sh  ios_info.xml  ios_permissions.json  keys.py  log  log2  log3  parse_ios_apps.py  pd_ios_apps.py  pdd  rdd  test_blacklist.py  test_blocklist.py  test_flask.py  test_ios_device.py  test_lightweight_df.py  test_parse_dump.py  test_phone_scanner.py  test_spy_re.py
tmp/: copy9.dump  settings.txt  trackview.dump
web/: __init__.py  schema.sql
webstatic/: myjscript.js  style.css
(+72 files in other folders)
