[metadata]
name = isdi-scanner
version = attr: isdi.__version__
description = Intimate Surveillance Detection Instrument - Phone privacy scanner
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stopipv/isdi
author = ISDI Contributors
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Topic :: Security
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = privacy, security, stalkerware, phone-scanner
project_urls =
    Bug Tracker = https://github.com/stopipv/isdi/issues
    Documentation = https://github.com/stopipv/isdi
    Source Code = https://github.com/stopipv/isdi

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    rsonlite>=0.1
    flask>=3.0
    flask-sqlalchemy>=3.0
    flask-wtf>=1.2
    pymobiledevice3>=4.0
    click>=8.0
    pyyaml>=6.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    isdi = isdi.cli:main

[options.package_data]
isdi =
    data/**/*
    web/templates/**/*
    web/static/**/*
    scripts/*.sh

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    black>=23.0
termux =
    pymobiledevice3>=4.0
